# beaujson

./: .clang-format  CMakeLists.txt  README.md  app.hpp  clipboard.cpp  clipboard.hpp  common.hpp  east_asian_width.cpp  east_asian_width.hpp  json.cpp  json.hpp  json_test.cpp  main.cpp  tty_file.hpp  util.cpp  util.hpp  util_test.cpp
.github/workflows/: cmake-multi-platform.yml
script/: genwidths.py
